# arcade-accelerate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
arcade_accelerate/: __init__.py
benchmark/: __init__.py  __main__.py  graph.py  manager.py  timing.py
benchmark/tests/: base.py
benchmark/tests/arcade/: collision.py
benchmark/tests/arcade_accelerate/: __init__.py  collision.py
python/arcade_accelerate/: __init__.py  module_patcher.py
src/: geometry.rs  hitbox.rs  lib.rs  math.rs  sprite.rs  sprite_list.rs
tests/: perf_compare.py  requirements-linting.txt
